fixed catch phrase spacing

--- a/frontend_react/src/container/About/About.scss
+++ b/frontend_react/src/container/About/About.scss
@@ -23,7 +23,7 @@
   img {
     width: 100%;
     height: 170px;
-    border-radius: 50px;
+    border-radius: 15px;
     object-fit: cover;
 
   }
@@ -33,8 +33,7 @@
 
     img {
       height: 320px;
-
-  
+        
     }
   }
 }
